fix: buttons clipped border on hover (#73)

--- a/packages/workshop-app/app/styles/app.css
+++ b/packages/workshop-app/app/styles/app.css
@@ -9,7 +9,7 @@ body {
 }
 
 .clip-path-button {
-	clip-path: polygon(0 0, 100% 0, 100% 75%, 90.5% 100%, 0 100%);
+	clip-path: polygon(0 0, 100% 0, 100% 70%, 88.5% 100%, 0 100%);
 }
 
 .shadow-on-scrollbox {
